@@ -39,6 +39,7 @@ Bug Fixes
  * Passthrough doesn't work with domains without an ending slash (#1368)
  * Returning exit status 0 on command line tools when asked to show help
  * pfcmd's general help is now sent to standard ouput instead of standard error
+ * Globally disabled privilege detection in hardware requiring Telnet / SSH. All except Trapeze. (#1370)
 
 Translations
  * Updated Brazilian Portuguese (pt_BR) Admin guide translation (Thanks to Diego de Souza Lopes)
